--- a/nodeconfig/org0_order/configtx.yaml
+++ b/nodeconfig/org0_order/configtx.yaml
@@ -25,7 +25,7 @@ Organizations:
         ID: OrdererMSP
 
         # MSPDir is the filesystem path which contains the MSP configuration
-        MSPDir: ../test/org0/msp
+        MSPDir: ./organizations/org0/msp
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
@@ -42,7 +42,7 @@ Organizations:
                 Rule: "OR('OrdererMSP.admin')"
 
         OrdererEndpoints:
-            - orderer.example.com:7050
+            - 127.0.0.1:8021
 
     - &Org1
         # DefaultOrg defines the organization which is used in the sampleconfig
@@ -52,7 +52,7 @@ Organizations:
         # ID to load the MSP definition as
         ID: Org1MSP
 
-        MSPDir: ./org1/msp
+        MSPDir: ./organizations/org1/msp
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
@@ -79,7 +79,7 @@ Organizations:
         # ID to load the MSP definition as
         ID: Org2MSP
 
-        MSPDir: ../test/org1/msp
+        MSPDir: ./organizations/org2/msp
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
@@ -209,14 +209,16 @@ Orderer: &OrdererDefaults
     # as TLS validation.  The preferred way to specify orderer addresses is now
     # to include the OrdererEndpoints item in your org definition
     Addresses:
-        - orderer.example.com:8000
+        - 127.0.0.1:8021
 
+    # zhouxv
     EtcdRaft:
         Consenters:
-        - Host: orderer.example.com
-          Port: 7050
-        #   ClientTLSCert: ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
-        #   ServerTLSCert: ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
+        - Host: 127.0.0.1
+          Port: 8021
+          # zhouxv
+          ClientTLSCert: ./organizations/org0/msp/tlscacerts/ca-cert.pem
+          ServerTLSCert: ./organizations/org0/msp/tlscacerts/ca-cert.pem
 
     # Batch Timeout: The amount of time to wait before creating a batch
     BatchTimeout: 2s
