--- a/nodeconfig/org1_peer1/core.yaml
+++ b/nodeconfig/org1_peer1/core.yaml
@@ -12,20 +12,24 @@ peer:
 
     # The peer id provides a name for this peer instance and is used when
     # naming docker resources.
-    id: jdoe
+    # zhouxv
+    id: peer1Org1
 
     # The networkId allows for logical separation of networks and is used when
     # naming docker resources.
-    networkId: dev
+    # zhouxv
+    networkId: peer1Org1
 
     # The Address at local network interface this Peer will listen on.
     # By default, it will listen on all network interfaces
-    listenAddress: 0.0.0.0:7051
+    # zhouxv
+    listenAddress: 127.0.0.1:8000
 
     # The endpoint this peer uses to listen for inbound chaincode connections.
     # If this is commented-out, the listen address is selected to be
     # the peer's address (see below) with port 7052
-    # chaincodeListenAddress: 0.0.0.0:7052
+    # zhouxv
+    chaincodeListenAddress: 127.0.0.1:8001
 
     # The endpoint the chaincode for this peer uses to connect to the peer.
     # If this is not specified, the chaincodeListenAddress address is selected.
@@ -33,13 +37,16 @@ peer:
     # peer address (see below). If specified peer address is invalid then it
     # will fallback to the auto detected IP (local IP) regardless of the peer
     # addressAutoDetect value.
-    # chaincodeAddress: 0.0.0.0:7052
+    # zhouxv
+    chaincodeAddress: 127.0.0.1:8001
 
     # When used as peer config, this represents the endpoint to other peers
     # in the same organization. For peers in other organization, see
     # gossip.externalEndpoint for more info.
     # When used as CLI config, this means the peer's endpoint to interact with
-    address: 0.0.0.0:7051
+
+    # zhouxv
+    address: 127.0.0.1:8000
 
     # Whether the Peer should programmatically determine its address
     # This case is useful for docker containers.
@@ -75,7 +82,7 @@ peer:
             # nodes.
             interval: 60s
             # Timeout is the duration the client waits for a response from
-            # ordering nodes before closing the connection
+            # ordering nodes before closing the connection 
             timeout: 20s
 
 
@@ -86,7 +93,8 @@ peer:
         # Important: The endpoints here have to be endpoints of peers in the same
         # organization, because the peer would refuse connecting to these endpoints
         # unless they are in the same organization as the peer.
-        bootstrap: 127.0.0.1:7051
+        # zhouxv
+        bootstrap: 127.0.0.1:8000
 
         # NOTE: orgLeader and useLeaderElection parameters are mutual exclusive.
         # Setting both to true would result in the termination of the peer
@@ -98,14 +106,16 @@ peer:
         # "leader" selection, where leader is the peer to establish
         # connection with ordering service and use delivery protocol
         # to pull ledger blocks from ordering service.
-        useLeaderElection: false
+        # zhouxv
+        useLeaderElection: true
         # Statically defines peer to be an organization "leader",
         # where this means that current peer will maintain connection
         # with ordering service and disseminate block across peers in
         # its own organization. Multiple peers or all peers in an organization
         # may be configured as org leaders, so that they all pull
         # blocks directly from ordering service.
-        orgLeader: true
+        # zhouxv
+        orgLeader: false
 
         # Interval for membershipTracker polling
         membershipTrackerInterval: 5s
@@ -296,7 +306,8 @@ peer:
     # Path on the file system where peer will store data (eg ledger). This
     # location must be access control protected to prevent unintended
     # modification that might corrupt the peer operations.
-    fileSystemPath: /var/hyperledger/production
+    # zhouxv
+    fileSystemPath: ../node/peer1-org1
 
     # BCCSP (Blockchain crypto provider): Select which crypto implementation or
     # library to use
@@ -307,8 +318,9 @@ peer:
             # TODO: The default Hash and Security level needs refactoring to be
             # fully configurable. Changing these defaults requires coordination
             # SHA2 is hardcoded in several places, not only BCCSP
+            # zhouxv
             Hash: SHA2
-            Security: 256
+            Security: 384
             # Location of Key Store
             FileKeyStore:
                 # If "", defaults to 'mspConfigPath'/keystore
@@ -325,7 +337,8 @@ peer:
             Security:
 
     # Path on the file system where peer will find MSP local configurations
-    mspConfigPath: msp
+    # zhouxv
+    mspConfigPath: /home/dinglab-dell/fabric-ca-test/hyperledger/org1/peer1/msp
 
     # Identifier of the local MSP
     # ----!!!!IMPORTANT!!!-!!!IMPORTANT!!!-!!!IMPORTANT!!!!----
@@ -334,7 +347,8 @@ peer:
     # to match the name of one of the MSPs in each of the channel
     # that this peer is a member of. Otherwise this peer's messages
     # will not be identified as valid by other nodes.
-    localMspId: SampleOrg
+    # zhouxv
+    localMspId: peer1Org1
 
     # CLI common client config options
     client:
@@ -375,7 +389,7 @@ peer:
     # production, it should be disabled (eg enabled: false)
     profile:
         enabled:     false
-        listenAddress: 0.0.0.0:6060
+        listenAddress: 127.0.0.1:6060
 
     # Handlers defines custom handlers that can filter and mutate
     # objects passing within the peer, such as:
@@ -481,7 +495,8 @@ vm:
     # unix:///var/run/docker.sock
     # http://localhost:2375
     # https://localhost:2376
-    endpoint: unix:///var/run/docker.sock
+    # zhouxv 
+    endpoint: http://localhost:8002
 
     # settings for docker vms
     docker:
@@ -611,6 +626,7 @@ chaincode:
     # Logging section for the chaincode container
     logging:
       # Default level for all loggers within the chaincode container
+      # zhouxv
       level:  info
       # Override default level for the 'shim' logger
       shim:   warning
@@ -639,7 +655,8 @@ ledger:
        # not map the CouchDB container port to a server port in docker-compose.
        # Otherwise proper security must be provided on the connection between
        # CouchDB client (on the peer) and server.
-       couchDBAddress: 127.0.0.1:5984
+       # zhouxv
+       couchDBAddress: 127.0.0.1:8003
        # This username must have read and write authority on CouchDB
        username:
        # The password is recommended to pass as an environment variable
@@ -712,9 +729,11 @@ ledger:
 ###############################################################################
 operations:
     # host and port for the operations server
-    listenAddress: 127.0.0.1:9443
+    # zhouxv
+    listenAddress: 127.0.0.1:8004
 
     # TLS configuration for the operations endpoint
+    # zhoux
     tls:
         # TLS enabled
         enabled: false
